--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 code {
   @apply bg-gray-600 p-1 rounded-md;
 }
